Update 5-3. NEW FIORI 총정리.md

--- a/RAP/5-3. NEW FIORI 총정리.md
+++ b/RAP/5-3. NEW FIORI 총정리.md
@@ -4901,5 +4901,330 @@ sap.ui.define([
     </Dialog>
 </core:FragmentDefinition>
 ```
+</br>
+</br>
+
+---
+
+</br>
+
+# 02/11
+</br>
+
+## <  핵심 개념 >
+- **1) npm 기반 프론트엔드 배포 절차 정리**
+- **2) SAP UI5 테마 커스터마이징 (TCODE - FIORI LAUNCHPAD : `/n/ui2/flp`), TCODE - 테마 : `/n/ui5/theme_designer`)**
+- **3) Fiori Launchpad 타일 생성부터 권한 부여까지 전체 설정 가이드**
+</br>
+</br>
+
+---
+
+</br>
+
+## < npm 기반 프론트엔드 배포 절차 정리 >
+</br>
+
+### 1) `cd project path` 로 경로 이동
+
+<img width="573" height="433" alt="image" src="https://github.com/user-attachments/assets/b6d052ac-f52e-4b6a-8c39-cd8c91af0e13" />
+</br>
+</br>
+
+### 2) npm 배포 명령어 실행 순서
+- 최초 1회 실행
+
+  - npm run build
+  - npm run deploy-config
+  - npm run deploy
+- 2번째 배포부터
+  
+  - npm run build
+  - npm run deploy
+</br>
+
+### 3) Fiori 프로젝트를 ABAP 서버에 배포하기 위한 초기 배포 설정 과정
+
+<img width="418" height="200" alt="image" src="https://github.com/user-attachments/assets/a13f03c7-552d-4c9f-b3bc-d18f014f08e1" />
+</br>
+</br>
+
+### 4) FIORI ABAP REPOSITORY 배포 및 CTS TRANSPORT 연계 설정
+- FIORI 배포 결과물이 dist 폴더로 생성됨
+- 배포 설정 정보는 `ui5-deploy.yaml` 파일에 저장됨
+- APP NAME은 ABAP 저장소 규칙에 따라 대문자로 설정됨 (`ZUIPROG_B03_01`)
+- ABAP REPOSITORY에 등록되어 CTS TRANSPORT와 연계됨
+- CTS TRANSPORT를 통해 다른 시스템으로 이관 가능한 프로그램임
+
+<img width="476" height="204" alt="image" src="https://github.com/user-attachments/assets/7b620fec-7067-43a4-871f-d16125edbaad" />
+</br>
+</br>
+
+### 5) npm run deploy 실행으로 FIORI 애플리케이션이 ABAP 저장소에 정상 배포됨
+
+<img width="479" height="250" alt="image" src="https://github.com/user-attachments/assets/d3adcf98-380d-4e6a-bbc2-2e3460aaef36" />
+</br>
+</br>
+
+- SE80에서 ZUIPROG_B03_01 BSP APPLICATION이 생성되어 ABAP 저장소에 등록된 상태임
+<img width="323" height="274" alt="image" src="https://github.com/user-attachments/assets/c3d362c2-6bae-4ffb-a901-42dcd8e21fd2" />
+</br>
+</br>
+
+### 6) BAS에서 코드 변경 후에 `npm run build` -> `npm run deploy` 하고 SAP GUI 확인 시 변경된 것을 확인 가능
+
+<img width="649" height="217" alt="image" src="https://github.com/user-attachments/assets/8105de01-554a-40e4-be98-54bf53acd451" />
+</br>
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < SAP UI5 테마 커스터마이징 (TCODE - FIORI LAUNCHPAD : `/n/ui2/flp`), TCODE - 테마 : `/n/ui5/theme_designer`) >
+</br>
+
+### 1) ABAP 시스템으로 배포하면서 CTS TRANSPORT를 지정
+- 기존 CTS를 선택하면 기존 이관 요청에 포함되고, 새로 생성하면 새로운 TRANSPORT REQUEST로 생성되어 관리됨
+
+<img width="352" height="160" alt="image" src="https://github.com/user-attachments/assets/2a194397-1c0e-4b6a-8fb7-b49c91c7afc5" />
+
+<img width="439" height="116" alt="image" src="https://github.com/user-attachments/assets/9e257597-bb7d-46d6-8bb4-91f33868611e" />
+</br>
+</br>
+</br>
+
+### 2) `npm run build` -> `npm run deploy-config` -> `npm run deploy` 후에 ABAP 패키지(ZPACB03_01)에 정상 등록된 것을 확인 가능
+
+<img width="580" height="251" alt="image" src="https://github.com/user-attachments/assets/2f3de493-e25d-4b9a-bbba-0501fd47f0e7" />
+</br>
+</br>
+</br>
+
+### 3) `/n/ui2/flp` 명령어로 FIORI LAUNCHPAD에 접속
+
+<img width="697" height="253" alt="image" src="https://github.com/user-attachments/assets/4497ba3e-0f84-4476-9253-5d2f31f5f39b" />
+</br>
+</br>
+</br>
+
+
+### 4) `/n/ui5/theme_designer` 명령어로 FIORI 테마를 커스터마이징(로고·색상·배경 등 변경) 가능
+- 테마 변경 후 ‘저장’은 임시저장, ‘저장 및 작성’은 최종 활성화, ‘닫기’는 편집 종료 후 다음 단계로 이동
+
+<img width="718" height="319" alt="image" src="https://github.com/user-attachments/assets/01d1c3b3-9728-41ce-949a-f54c9803a1d5" />
+
+<img width="718" height="321" alt="image" src="https://github.com/user-attachments/assets/dab8c803-0be0-4716-a091-4012c4568b2c" />
+</br>
+</br>
+
+- 기존 SAP_HORIZON 테마를 기준으로 새로운 커스텀 테마(NCODEB03, NCODEB03 Theme)를 생성하여 저장
+
+<img width="434" height="191" alt="image" src="https://github.com/user-attachments/assets/d5446ef4-112c-45d0-895b-991b715c11e2" />
+</br>
+</br>
+</br>
+
+### 5) 생성한 커스텀 테마(NCODEB03)를 선택하여 편집·저장·삭제·이름변경 등 가능
+
+<img width="839" height="353" alt="image" src="https://github.com/user-attachments/assets/aa58dce8-f895-4a00-b1a4-a017ae5d05f7" />
+
+<img width="696" height="311" alt="image" src="https://github.com/user-attachments/assets/935855c7-7f3f-4fb7-9a0a-073dad840c17" />
+
+<img width="732" height="328" alt="image" src="https://github.com/user-attachments/assets/7ef4fef9-52ae-48f0-b6ad-6b949064ef4e" />
+</br>
+</br>
+</br>
+
+### 6) Fiori Launchpad 설정(Settings)에서 생성한 커스텀 테마(NCODEB03)를 선택·저장하여 사용자 화면에 적용
+
+<img width="804" height="371" alt="image" src="https://github.com/user-attachments/assets/f1d7afc6-fbd7-4f15-86b5-c854fbde04fe" />
+
+<img width="805" height="380" alt="image" src="https://github.com/user-attachments/assets/d63fa4de-bf3e-4d7e-8be2-ff13cd8e17bb" />
+
+<img width="718" height="325" alt="image" src="https://github.com/user-attachments/assets/0a239337-60ab-47fd-873f-9c936174ca39" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < Fiori Launchpad 타일 생성부터 권한 부여까지 전체 설정 가이드 >
+</br>
+
+**1) 카탈로그 및 그룹 생성 (TCODE - 카탈로그 : `/n/ui2/flpd_cust`)**
+- 카탈로그 생성
+
+  - 카탈로그 타이틀: `[B##] My catalog`
+  - 카탈로그 ID: `ZCAID_B##`
+- 타일 생성
+
+  - 시멘틱 오브젝트: `ZSOB##_01`
+  - Action: `display`
+  - Target Mapping 설정 → 연결할 프로그램(앱) 지정
+- 그룹 생성
+
+  - 그룹 ID: `ZGRID_B##`
+  - 생성한 타일을 해당 그룹에 추가
+ 
+**2) 권한 부여 (TCODE - Role : `PFCG`)**
+- 생성한 카탈로그와 그룹에 대해 역할(Role)을 생성
+- 해당 역할을 사용자에게 할당하여 실행 권한 부여
+</br>
+
+### 1) Fiori Launchpad에서 새로운 Catalog를 생성
+- 클라이언트 100번인지 확인
+  
+<img width="755" height="363" alt="image" src="https://github.com/user-attachments/assets/7de45df5-4bb9-4b74-bb42-87d75d7cb472" />
+</br>
+
+<img width="227" height="247" alt="image" src="https://github.com/user-attachments/assets/2e6425da-e9c5-45c6-b93e-072909361e76" />
+</br>
+</br>
+</br>
+
+### 2) 특정 Catalog(카테고리) 안에서 Static 타일을 생성하고, Semantic Object/Action으로 앱을 연결
+
+<img width="744" height="245" alt="image" src="https://github.com/user-attachments/assets/edb12ca3-05f1-443b-8a2f-565089f56108" />
+</br>
+</br>
+
+<img width="631" height="215" alt="image" src="https://github.com/user-attachments/assets/6efe4f70-3f39-4966-98db-b8001380c0dc" />
+</br>
+</br>
+
+<img width="621" height="446" alt="image" src="https://github.com/user-attachments/assets/077c07ae-d0d5-4051-a127-e4c18691b1e4" />
+</br>
+</br>
+</br>
+
+### 3) Catalog 안에서 Target Mapping을 생성하고, manifest.json의 앱 ID를 연결해 Semantic Object/Action으로 Fiori를 매핑
+
+<img width="729" height="431" alt="image" src="https://github.com/user-attachments/assets/33f9d540-9e9f-4f6e-aeaf-9feb46601287" />
+</br>
+</br>
+
+<img width="479" height="298" alt="image" src="https://github.com/user-attachments/assets/028233be-6cda-45cf-8808-29d4c541fd9e" />
+</br>
+</br>
+
+<img width="677" height="357" alt="image" src="https://github.com/user-attachments/assets/6f74babd-c472-4f63-964c-5a3d43d881aa" />
+</br>
+</br>
+
+- Catalog 안에서 생성된 Target Mapping을 수정도 가능함
+
+<img width="646" height="486" alt="image" src="https://github.com/user-attachments/assets/1a56df74-a3da-4fde-a51d-2ec44ca13e90" />
+</br>
+</br>
+
+- Catalog 안에 생성된 타일을 복사하거나 삭제도 가능
+
+<img width="551" height="331" alt="image" src="https://github.com/user-attachments/assets/39c7a9a7-4f2e-4ed5-9b1e-68714bbd9ae8" />
+
+</br>
+</br>
+</br>
+
+### 4) Fiori Launchpad에서 새로운 Group을 생성하고, 해당 그룹에 타일을 배치
+<img width="639" height="507" alt="image" src="https://github.com/user-attachments/assets/6a8cdfdf-8dd5-42d3-8f1a-ccaaf9b942dd" />
+</br>
+</br>
+
+<img width="292" height="335" alt="image" src="https://github.com/user-attachments/assets/38405cb9-cc6b-44a4-9359-7fa4203d754a" />
+</br>
+</br>
+</br>
+
+### 5) Catalog에 만든 타일을 선택해서 Group에 추가하고, Launchpad 홈 화면에 배치
+
+<img width="375" height="444" alt="image" src="https://github.com/user-attachments/assets/156797b1-518a-4437-a4ce-a343835ecccd" />
+</br>
+</br>
+
+<img width="604" height="535" alt="image" src="https://github.com/user-attachments/assets/29755527-8351-4989-8636-9a3b7895b1b7" />
+</br>
+</br>
+</br>
+
+### 6) `PFCG` (Role Maintenance)에서 Single Role을 생성해 사용자에게 Fiori Catalog/Group 권한을 부여
+
+<img width="931" height="292" alt="image" src="https://github.com/user-attachments/assets/1d9605af-612d-4528-9aaf-e3deef4d5642" />
+</br>
+</br>
+</br>
+
+### 7) `PFCG` 에서 Fiori Launchpad Catalog를 추가해 해당 Role에 앱 권한을 연결
+<img width="844" height="500" alt="image" src="https://github.com/user-attachments/assets/5703bd7b-ae40-4d9a-87df-0362fc628bff" />
+</br>
+</br>
+
+<img width="828" height="284" alt="image" src="https://github.com/user-attachments/assets/53422c02-dd50-4862-af50-ff2a65df0c68" />
+</br>
+</br>
+</br>
+
+### 8) `PFCG` 에서 Fiori Launchpad Group을 추가해 사용자의 홈 화면에 타일이 보이도록 연결
+
+<img width="779" height="494" alt="image" src="https://github.com/user-attachments/assets/03a83572-4106-44ae-a391-43ddfb8b14d9" />
+</br>
+</br>
+
+<img width="778" height="134" alt="image" src="https://github.com/user-attachments/assets/42a33bed-3819-4cad-a81d-f6929e7fad99" />
+</br>
+</br>
+</br>
+
+### 9) `PFCG` 의 User 탭에서 해당 Role을 사용자에게 할당
+
+<img width="773" height="408" alt="image" src="https://github.com/user-attachments/assets/be3f9af8-8988-4486-aeaf-794c5caf8e78" />
+</br>
+</br>
+</br>
+</br>
+</br>
+
+---
+
+</br>
+
+## < 실습 >
+</br>
+
+### 실습 1 : 배포한 UI5 앱을 FLP에 타일로 등록하고 권한까지 연결하는 실습
+
+</br>
+
+<img width="351" height="196" alt="image" src="https://github.com/user-attachments/assets/db7d4391-b209-41e5-83e1-c8c17ffb00d6" />
+
+</br>
+</br>
+</br>
+
+- Static 타일에서 제목·아이콘 설정 후 Semantic Object(ZSOB3_02)와 Action(display)으로 앱을 연결
+<img width="607" height="410" alt="image" src="https://github.com/user-attachments/assets/3de3183a-513b-4ccc-b895-357f79e824a5" />
+</br>
+</br>
+
+- Catalog에 Target Mapping을 새로 추가해 Semantic Object/Action으로 앱을 연결
+<img width="958" height="251" alt="image" src="https://github.com/user-attachments/assets/dffce9e7-398f-41cb-896e-168306721f0b" />
+</br>
+</br>
+
+- 카탈로그의 타일을 선택해 특정 Group에 추가
+<img width="406" height="355" alt="image" src="https://github.com/user-attachments/assets/28772165-5fec-413b-8b0b-76c7d88f6699" />
+</br>
+</br>
+
+- Launchpad 홈 화면의 해당 Group에 추가한 타일이 정상적으로 표시\
+<img width="604" height="414" alt="image" src="https://github.com/user-attachments/assets/90280b07-3438-4dc3-962f-2a7e784ce6ab" />
 
 
