Update 1-9. 프로그래밍 코드 최적화(02.11).md

--- a/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
+++ b/RAP/1-9. 프로그래밍 코드 최적화(02.11).md
@@ -311,5 +311,5 @@
 </br>
 </br>
 
-- Launchpad 홈 화면의 해당 Group에 추가한 타일이 정상적으로 표시\
+- Launchpad 홈 화면의 해당 Group에 추가한 타일이 정상적으로 표시
 <img width="604" height="414" alt="image" src="https://github.com/user-attachments/assets/90280b07-3438-4dc3-962f-2a7e784ce6ab" />
