--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -1,1 +1,10 @@
-1-9. 프로그래밍 코드 최적화(02.11).md
+## Header-Item Read로 읽기 (수정본)
+- 아이템만 생성하려고 했는데 아이템만 생성하는 코드를 안짜서 생성은 못짰음
+- 라우팅 복습
+
+<img width="549" height="286" alt="image" src="https://github.com/user-attachments/assets/c952ee67-8a5f-4e79-ad1f-558008c99dd3" />
+
+</br>
+</br>
+
+###
