Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -13,4 +13,45 @@
 </br>
 </br>
 
-###
+### 1) manifest.json
+```json
+"routes": [
+    {
+      "name": "RouteMain",
+      "pattern": ":?query:",
+      "target": [
+        "TargetMain"
+      ]
+    },
+    {
+      "name": "RouteCreateItem",
+      "pattern": "CreateItem/{pa1}",
+      "target": [
+        "TargetCreateItem"
+      ]
+    }
+  ],
+  "targets": {
+    "TargetMain": {
+      "id": "Main",
+      "name": "Main"
+    },
+    "TargetCreateItem": {
+      "id": "CreateItem",
+      "name": "CreateItem"
+    }
+  }
+}
+```
+</br>
+</br>
+
+### 2) Main.controller.js
+
+</br>
+</br>
+
+### 3) Main.controller.js
+
+</br>
+</br>
