Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -15,6 +15,8 @@
 
 ### 1) manifest.json
 ```json
+// assignment2_1
+
 "routes": [
 {
   "name": "RouteMain",
@@ -46,11 +48,304 @@
 </br>
 
 ### 2) Main.controller.js
+```java
+// assignment2_1
 
+sap.ui.define([
+    "sap/ui/core/mvc/Controller",
+    "sap/ui/model/json/JSONModel"
+], (Controller, JSONModel) => {
+    "use strict";
+
+    return Controller.extend("assignment21.controller.Main", {
+        onInit() {
+            this.oInputModel = new JSONModel();
+            this.oHeaderModel = new JSONModel();
+            this.oItemModel = new JSONModel({
+                ItemSet: []
+            });
+            this.getOwnerComponent().setModel(this.oInputModel, "oInputModel");
+            this.getOwnerComponent().setModel(this.oHeaderModel, "oHeaderModel");
+            this.getOwnerComponent().setModel(this.oItemModel, "oItemModel");
+            this.oDataModel = this.getOwnerComponent().getModel();
+
+            this.oDataModel.read("/HeaderSet", {
+                urlParameters: {
+                    "$expand" : "ItemSet",
+                },
+                success: function(oReturn) {
+                    let ItemSet = [];
+                    this.oHeaderModel.setData(oReturn.results);
+                    for(let i=0; i<oReturn.results.length; i++) {
+                        for(let j=0; j<oReturn.results[i].ItemSet.results.length; j++) {
+                            ItemSet.push(oReturn.results[i].ItemSet.results[j]);
+                        }
+                    }
+                    this.oItemModel.setProperty("/ItemSet", ItemSet);
+                }.bind(this),
+                error: function() {
+                    sap.m.MessageToast.show("Header 조회 실패!");
+                }
+            })
+
+        },
+        onPress: function() {
+            let oRouter = this.getOwnerComponent().getRouter();
+            let pa1 = this.getView().byId("idHeaderTable").getSelectedItem().getBindingContext("oHeaderModel").getObject().Carrid;
+            oRouter.navTo("RouteCreateItem", { pa1: pa1 });
+        }
+    });
+});
+```
 </br>
 </br>
 
-### 3) Main.controller.js
+### 3) Main.view.xml
+```html
+// assignment2_1
 
+<mvc:View controllerName="assignment21.controller.Main"
+    xmlns:mvc="sap.ui.core.mvc"
+    xmlns="sap.m">
+    <Page id="page" title="{i18n>title}">
+        <Table id="idHeaderTable"
+                sticky="HeaderToolbar,ColumnHeaders"
+                inset="false"
+                items="{oHeaderModel>/}"
+                selectionChange="onSelectionChange"
+                class="sapFDynamicPageAlignContent"
+                mode="SingleSelectLeft"
+                width="auto"
+                updateFinished="onHeaderUpdateFinished">
+            <headerToolbar>
+                <Toolbar>
+                    <Title text="Header Table" level="H2" />
+                    <Button text="생성" press="onPress"/>
+                </Toolbar>
+            </headerToolbar>
+            <columns>
+                <Column width="12em">
+                    <Text text="Carrid" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Carrname" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Currcode" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem>
+                    <cells>
+                        <Text text="{oHeaderModel>Carrid}" />
+                        <Text text="{oHeaderModel>Carrname}" />
+                        <Text text="{oHeaderModel>Currcode}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+        <Toolbar class="sapUiMediumMarginTop" visible="true"/>
+        <Table id="idItemTable"
+                visible="true"
+                sticky="HeaderToolbar,ColumnHeaders"
+                inset="false"
+                items="{oItemModel>/ItemSet}"
+                class="sapFDynamicPageAlignContent"
+                width="auto">
+            <headerToolbar>
+                <Toolbar>
+                    <Title text="Item Table" level="H2" />
+                </Toolbar>
+            </headerToolbar>
+            <columns>
+                <Column width="12em">
+                    <Text text="Carrid" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Connid" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Cityfrom" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Airpfrom" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Cityto" />
+                </Column>
+                <Column width="12em">
+                    <Text text="Airpto" />
+                </Column>
+            </columns>
+            <items>
+                <ColumnListItem>
+                    <cells>
+                        <Text text="{oItemModel>Carrid}" />
+                        <Text text="{oItemModel>Connid}" />
+                        <Text text="{oItemModel>Cityfrom}" />
+                        <Text text="{oItemModel>Airpfrom}" />
+                        <Text text="{oItemModel>Cityto}" />
+                        <Text text="{oItemModel>Airpto}" />
+                    </cells>
+                </ColumnListItem>
+            </items>
+        </Table>
+    </Page>
+</mvc:View>
+```
+</br>
+</br>
+
+### 4) CreateItem.controller.js
+```java
+// assignment2_1
+
+sap.ui.define([
+    "sap/ui/core/mvc/Controller"
+], (Controller) => {
+    "use strict";
+
+    return Controller.extend("assignment21.controller.Detail", {
+        onInit() {
+            const oRouter = this.getOwnerComponent().getRouter();
+            oRouter.getRoute("RouteCreateItem").attachPatternMatched(this._attachPatternMatched, this);
+        },
+        _attachPatternMatched: function(oEvent) {
+            let gv_carrid = oEvent.getParameters().arguments.pa1;
+            let oInputModel = this.getOwnerComponent().getModel("oInputModel");
+            let oHeaderModel = this.getOwnerComponent().getModel("oHeaderModel");
+            let oItemModel = this.getOwnerComponent().getModel("oItemModel");
+            if (!oHeaderModel || !oItemModel) {
+                return;
+            }
+            let oHeaderData = oHeaderModel.getData();
+            let oHeaderRow = oHeaderData.find(function(item) {
+                return item.Carrid === gv_carrid
+            })
+            oInputModel.setData({
+                "Carrid": oHeaderRow.Carrid,
+                "Carrname": oHeaderRow.Carrname,
+                "Currcode": oHeaderRow.Currcode
+            })
+
+            // let oItemData = oItemModel.getProperty("/ItemSet");
+            // let oItemRow = oItemData.find(function(item) {
+            //     return item.Carrid === gv_carrid
+            // })
+            // // filter를 사용하면 gv_carrid와 일치하는 모든 행을 배열로 담음
+            // let oItemRow = oItemData.filter(function(item) {
+            //     return item.Carrid === gv_carrid;
+            // });
+            debugger;
+        },
+        onNavButtonPress: function() {
+            let oRouter = this.getOwnerComponent().getRouter();
+            oRouter.navTo("RouteMain");
+        },
+        onSave: function() {
+            let oInputModel = this.getOwnerComponent().getModel("oInputModel");
+            let oItemModel = this.getOwnerComponent().getModel("oItemModel");
+            let oData = oInputModel.getData();
+            let oItem = [];
+            oItem.push({
+                Carrid   : oData.Carrid,      
+                Connid   : oData.Connid,
+                Cityfrom : oData.Cityfrom,
+                Airpfrom : oData.Airpfrom,
+                Cityto   : oData.Cityto,
+                Airpto   : oData.Airpto
+            });
+            // oItemModel.create("/ItemSet", oItem, {
+            //     success: function() {
+            //         sap.m.MessageToast.show("생성 성공!");
+            //     },
+            //     error: function() {
+            //         sap.m.MessageToast.show("생성 실패!");
+            //     }
+            // });
+        }
+    }); 
+});
+```
+</br>
+</br>
+
+### 5) CreateItem.view.xml
+```html
+// assignment2_1
+
+<mvc:View controllerName="assignment21.controller.CreateItem"
+    xmlns:mvc="sap.ui.core.mvc"
+	xmlns:f="sap.ui.layout.form"
+    xmlns="sap.m">
+    <Page id="page2" showNavButton="true" navButtonPress="onNavButtonPress" title="{i18n>title}">
+        <VBox class="sapUiSmallMargin">
+            <f:SimpleForm id="SimpleFormChange1"
+                editable="true"
+                layout="ResponsiveGridLayout"
+                title="Header"
+                labelSpanXL="3"
+                labelSpanL="3"
+                labelSpanM="3"
+                labelSpanS="12"
+                adjustLabelSpan="false"
+                emptySpanXL="4"
+                emptySpanL="4"
+                emptySpanM="4"
+                emptySpanS="0"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1"
+                singleContainerFullSize="false">
+                <f:content>
+                    <Label text="Carrid" />
+                    <Input id="Carrid" value="{oInputModel>/Carrid}" editable="false"/>
+                    <Label text="Carrname" />
+                    <Input id="Carrname" value="{oInputModel>/Carrname}" editable="false"/>
+                    <Label text="Currcode" />
+                    <Input id="Currcode" value="{oInputModel>/Currcode}" editable="false"/>                   
+                </f:content>
+            </f:SimpleForm>
+
+            <f:SimpleForm id="SimpleFormChange2"
+                editable="true"
+                layout="ResponsiveGridLayout"
+                labelSpanXL="3"
+                labelSpanL="3"
+                labelSpanM="3"
+                labelSpanS="12"
+                adjustLabelSpan="false"
+                emptySpanXL="4"
+                emptySpanL="4"
+                emptySpanM="4"
+                emptySpanS="0"
+                columnsXL="1"
+                columnsL="1"
+                columnsM="1"
+                singleContainerFullSize="false" >
+                <f:toolbar>
+                    <Toolbar class="sapUiLargeMarginTop">
+                        <Title text="Item" />
+                        <ToolbarSpacer />
+                        <Button text="생성" type="Transparent" press="onSave" />
+                    </Toolbar>
+                </f:toolbar>
+                <f:content>
+                    <Label text="Connid" />
+                    <Input id="Connid" value="{oInputModel>/Connid}" />
+                    <Label text="Cityfrom" />
+                    <Input id="Cityfrom" value="{oInputModel>/Cityfrom}" />
+                    <Label text="Airpfrom" />
+                    <Input id="Airpfrom" value="{oInputModel>/Airpfrom}" />       
+                    <Label text="Cityto" />
+                    <Input id="Cityto" value="{oInputModel>/AirpfCitytorom}" />    
+                    <Label text="Airpto" />
+                    <Input id="Airpto" value="{oInputModel>/Airpto}" />                
+                </f:content>
+            </f:SimpleForm>
+        </VBox>
+    </Page>
+</mvc:View>
+```
 </br>
 </br>
