Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -1,4 +1,4 @@
-## Header-Item Read로 읽기 (수정본)
+## < 연습 : Header-Item Read로 읽기 (수정본) >
 - 아이템만 생성하려고 했는데 아이템만 생성하는 코드를 안짜서 생성은 못짰음
 - 라우팅 복습
 
@@ -349,3 +349,16 @@ sap.ui.define([
 ```
 </br>
 </br>
+</br>
+
+---
+
+</br>
+
+
+## < 과제 : Dialog를 이용한 CRUD 프로그램 >
+- 다이얼로그의 요소들에 대해 .byId 로 접근하는 실습
+
+<img width="670" height="408" alt="image" src="https://github.com/user-attachments/assets/06cd67d2-dec9-447e-8673-5abf9fab4f83" />
+
+<img width="940" height="470" alt="image" src="https://github.com/user-attachments/assets/756932e2-ec00-47c5-8e5c-b6072ea031f0" />
