Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -367,3 +367,7 @@ sap.ui.define([
 </br>
 
 - 결과 화면
+<img width="940" height="437" alt="image" src="https://github.com/user-attachments/assets/bdd23028-8966-425c-9180-b82f6a9ea86a" />
+
+<img width="940" height="309" alt="image" src="https://github.com/user-attachments/assets/f5e30bca-63e7-4c42-8b4e-9d102bee1c34" />
+
