Update 1-10. 프로그래밍 코드 최적화(02.12).md

--- a/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
+++ b/RAP/1-10. 프로그래밍 코드 최적화(02.12).md
@@ -370,4 +370,110 @@ sap.ui.define([
 <img width="940" height="437" alt="image" src="https://github.com/user-attachments/assets/bdd23028-8966-425c-9180-b82f6a9ea86a" />
 
 <img width="940" height="309" alt="image" src="https://github.com/user-attachments/assets/f5e30bca-63e7-4c42-8b4e-9d102bee1c34" />
+</br>
+</br>
+</br>
+</br>
 
+### 1) SAP GUI 코드
+- GET_ENTITYSET
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_GET_ENTITYSET
+
+method MEMBERENTITYSET_GET_ENTITYSET.
+  DATA: lr_name  TYPE /iwbep/t_cod_select_options,
+        lr_erdat TYPE /iwbep/t_cod_select_options,
+        lr_aedat TYPE /iwbep/t_cod_select_options.
+
+  LOOP AT it_filter_select_options INTO DATA(ls_filter).
+    CASE ls_filter-property.
+      WHEN 'Name'.
+        APPEND LINES OF ls_filter-select_options TO lr_name.
+      WHEN 'Erdat'.
+        APPEND LINES OF ls_filter-select_options TO lr_erdat.
+      WHEN 'Aedat'.
+        APPEND LINES OF ls_filter-select_options TO lr_aedat.
+    ENDCASE.
+  ENDLOOP.
+
+  SELECT * FROM zn2member_b03
+    INTO CORRESPONDING FIELDS OF TABLE @et_entityset
+    WHERE name  IN @lr_name
+      AND erdat IN @lr_erdat
+      AND aedat IN @lr_aedat.
+
+endmethod.
+```
+- GET_ENTITY
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_GET_ENTITY
+
+  method MEMBERENTITYSET_GET_ENTITY.
+    DATA: ls_data TYPE zn2member_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      ls_data-(ls_key-name) = ls_key-value.
+    ENDLOOP.
+
+    SELECT SINGLE * FROM zn2member_b03
+      INTO @DATA(ls_ressult)
+      WHERE id = @ls_data-id.
+    IF sy-subrc = 0.
+      MOVE-CORRESPONDING ls_ressult TO er_entity.
+    ENDIF.
+  endmethod.
+```
+- CREATE_ENTITY
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_CREATE_ENTITY
+
+  method MEMBERENTITYSET_CREATE_ENTITY.
+    DATA: ls_entity TYPE ZCL_ZGWMEMBER_B03_MPC=>TS_MEMBERENTITY,
+          ls_data TYPE zn2member_b03.
+
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+    CHECK sy-subrc = 0.
+    MOVE-CORRESPONDING ls_entity TO ls_data.
+    ls_data-erdat = sy-datum.
+    ls_data-erzet = sy-uzeit.
+    ls_data-ernam = sy-uname.
+    INSERT zn2member_b03 FROM ls_data.
+    MOVE ls_entity TO er_entity.
+  endmethod.
+```
+- UPDATE_ENTITY
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_UPDATE_ENTITY
+
+  method MEMBERENTITYSET_UPDATE_ENTITY.
+    DATA: ls_data TYPE zn2member_b03,
+          ls_entity TYPE ZCL_ZGWMEMBER_B03_MPC=>TS_MEMBERENTITY.
+    io_data_provider->read_entry_data( IMPORTING es_data = ls_entity ).
+    CHECK sy-subrc = 0.
+
+    SELECT SINGLE * FROM zn2member_b03
+      INTO ls_data
+      WHERE id = ls_entity-id.
+
+    ls_data-name = ls_entity-name.
+    ls_data-age = ls_entity-age.
+    ls_data-aedat = sy-datum.
+    ls_data-aezet = sy-uzeit.
+    ls_data-aenam = sy-uname.
+    UPDATE zn2member_b03 FROM ls_data.
+  endmethod.
+```
+- DELETE_ENTITY
+```abap
+" ZCL_ZGWMEMBER_B03_DPC_EXT : MEMBERENTITYSET_DELETE_ENTITY
+
+  method MEMBERENTITYSET_DELETE_ENTITY.
+    DATA: ls_data TYPE zn2member_b03.
+
+    LOOP AT it_key_tab INTO DATA(ls_key).
+      ls_data-(ls_key-name) = ls_key-value.
+    ENDLOOP.
+
+    DELETE zn2member_b03 FROM ls_data.
+  endmethod.
+```
